--- a/main/news/templates/base.html
+++ b/main/news/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href= https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css>
+    <link rel="home" type="application/rss+xml" href="http://example.com/feed" />
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
