several markup files have been added and the transition is enabled

--- a/main/news/templates/includes/header.html
+++ b/main/news/templates/includes/header.html
@@ -6,7 +6,7 @@
   </a>
 
   <ul class="nav nav-pills">
-    <li class="nav-item"><a href="{% url 'home' %}" class="btn btn-dark rounded-pill px-3" aria-current="page"><ya-tr-span data-index="3-0" data-translated="false" data-source-lang="en" data-target-lang="ru" data-value="News" data-translation="Новости" data-ch="0" data-type="trSpan">News</ya-tr-span></a></li>
-    <li class="nav-item"><a href="{% url 'about' %}" class="btn btn-dark rounded-pill px-3"><ya-tr-span data-index="7-0" data-translated="false" data-source-lang="en" data-target-lang="ru" data-value="About" data-translation="О нас" data-ch="0" data-type="trSpan">About</ya-tr-span></a></li>
+    <li class="nav-item"><a href="{% url 'home' %}" class="btn btn-dark rounded-pill px-3" aria-current="page"><ya-tr-span data-index="3-0" data-translated="false" data-source-lang="en" data-target-lang="ru" data-value="News" data-translation="Новости" data-ch="0" data-type="trSpan">Новости</ya-tr-span></a></li>
+    <li class="nav-item"><a href="{% url 'anews' %}" class="btn btn-dark rounded-pill px-3"><ya-tr-span data-index="7-0" data-translated="false" data-source-lang="en" data-target-lang="ru" data-value="All News" data-translation="Все новости" data-ch="0" data-type="trSpan">Все новости</ya-tr-span></a></li>
   </ul>
 </header>
